--- a/src/Plugins/Tax.Free/SmartStore.Plugin.Tax.Free.csproj
+++ b/src/Plugins/Tax.Free/SmartStore.Plugin.Tax.Free.csproj
@@ -115,6 +115,9 @@
     </Content>
     <Content Include="Notes.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\FixRazorIntellisense.targets" Condition="'$(Configuration)' == 'PluginDev'" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
