--- a/src/Plugins/Payments.Manual/SmartStore.Plugin.Payments.Manual.csproj
+++ b/src/Plugins/Payments.Manual/SmartStore.Plugin.Payments.Manual.csproj
@@ -162,6 +162,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\PaymentManual\PaymentInfo.Mobile.cshtml" />
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="web.config" />
   </ItemGroup>
