--- a/src/Plugins/Payments.Prepayment/SmartStore.Plugin.Payments.Prepayment.csproj
+++ b/src/Plugins/Payments.Prepayment/SmartStore.Plugin.Payments.Prepayment.csproj
@@ -159,6 +159,7 @@
     <Content Include="Notes.txt" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="web.config" />
   </ItemGroup>
