--- a/src/Plugins/Shipping.FixedRateShipping/SmartStore.Plugin.Shipping.FixedRateShipping.csproj
+++ b/src/Plugins/Shipping.FixedRateShipping/SmartStore.Plugin.Shipping.FixedRateShipping.csproj
@@ -155,6 +155,7 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="web.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
