--- a/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
@@ -129,6 +129,8 @@
     <Var name="ProductFilterBackgroundColor" type="Color">#f4f8f9</Var>
     <Var name="CheckoutProgressBackgroundColor" type="Color">#f5f5f5</Var>
     <Var name="AlternateListItemBackgroundColor" type="Color">#f5f5f5</Var>
+    <Var name="ProductListsPriceColor" type="Color">#468847</Var>
+    <Var name="ProductDetailPriceColor" type="Color">#f89406</Var>
     
     <!-- Slider -->
     <Var name="SliderUseRadialBg" type="Boolean">true</Var>
