* Implemented 'PluginDebugViewVirtualPathProvider'. Enables plugin view editing during debug (the one in the source folder ;-)) * Implemented 'IWidgetProvider'. Allows request scoped registration of action routes to be injectable into widget zones. Perfect for custom action filters. * Removed 'SmartStoreConfig' and moved all setting props to appSettings section of web.config. Added CommonHelper.GetAppSetting<T>() method for easier access.

--- a/src/Plugins/Developer.DevTools/SmartStore.Plugin.Developer.DevTools.csproj
+++ b/src/Plugins/Developer.DevTools/SmartStore.Plugin.Developer.DevTools.csproj
@@ -40,7 +40,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\Presentation\SmartStore.Web\Plugins\Misc.FilterTest\</OutputPath>
+    <OutputPath>..\..\Presentation\SmartStore.Web\Plugins\Developer.DevTools\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -49,7 +49,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\</OutputPath>
+    <OutputPath>..\..\Presentation\SmartStore.Web\Plugins\Developer.DevTools\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
