--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -240,6 +240,7 @@
     <Compile Include="Mvc\Bundles\IBundlePublisher.cs" />
     <Compile Include="Mvc\CommaSeparatedModelBinder.cs" />
     <Compile Include="Mvc\UniversalResult.cs" />
+    <Compile Include="Plugins\PluginDebugViewVirtualPathProvider.cs" />
     <Compile Include="Plugins\FeedPluginCore.cs" />
     <Compile Include="Plugins\FeedPluginHelper.cs" />
     <Compile Include="Plugins\PluginHelper.cs" />
@@ -265,6 +266,7 @@
     <Compile Include="UI\Components\Window\WindowRenderer.cs" />
     <Compile Include="UI\Components\Window\WindowBuilder.cs" />
     <Compile Include="UI\Components\Window\Window.cs" />
+    <Compile Include="UI\IWidgetProvider.cs" />
     <Compile Include="UI\IWidgetSelector.cs" />
     <Compile Include="UI\BundleBuilder.cs" />
     <Compile Include="UI\ScaffoldExtensions.cs" />
@@ -353,6 +355,7 @@
     <Compile Include="UI\Components\TabStrip\TabBuilder.cs" />
     <Compile Include="UI\Components\TabStrip\TabFactory.cs" />
     <Compile Include="UI\Components\TabStrip\TabStripRenderer.cs" />
+    <Compile Include="UI\WidgetProvider.cs" />
     <Compile Include="UI\WidgetRouteInfo.cs" />
     <Compile Include="UrlHelperExtensions.cs" />
     <Compile Include="Validators\ValidatorExtensions .cs" />
