--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="SmartStoreConfig" type="SmartStore.Core.Configuration.SmartStoreConfig, SmartStore.Core" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <sectionGroup name="bundleTransformer">
@@ -54,11 +53,6 @@
       </engines>
     </core>
   </jsEngineSwitcher>
-  <SmartStoreConfig>
-    <DynamicDiscovery Enabled="true" />
-    <Engine Type="" />
-    <Themes basePath="~/Themes/" />
-  </SmartStoreConfig>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -71,11 +65,18 @@
     <add key="GoogleMerchantKey" value="" />
     <add key="GoogleEnvironment" value="Sandbox" />
     <add key="GoogleAuthenticateCallback" value="True" />
-    <add key="ClearPluginsShadowDirectoryOnStartup" value="False" />
-    <add key="TempDirectory" value="~/App_Data/_temp" />
-    <add key="BizImportMediaDirectory" value="~/Media/Uploaded/static" />
-    <add key="ApplicationName" value="SmartStore.NET" />
-    <add key="PluginsIgnoredDuringInstallation" value="Misc.DemoShop, Api.WebApi, Developer.Glimpse" />
+    <add key="sm:ApplicationName" value="SmartStore.NET" />
+    <add key="sm:EnableDynamicDiscovery" value="true" />
+    <add key="sm:EngineType" value="" />
+    <add key="sm:ThemesBasePath" value="~/Themes/" />
+    <!-- add custom Area paths separated with comma (e.g.: "~/Plugins/, ~/Areas/") -->
+    <add key="sm:AreaBasePaths" value="~/Plugins/" />
+    <!-- set this to "true", if the view engine should also try to resolve view files ending with {CurrentLanguage} (e.g.: MyView.de.cshtml > MyView.cshtml)  -->
+    <add key="sm:EnableLocalizedViews" value="false" />
+    <add key="sm:ClearPluginsShadowDirectoryOnStartup" value="false" />
+    <add key="sm:TempDirectory" value="~/App_Data/_temp" />
+    <add key="sm:BizImportMediaDirectory" value="~/Media/Uploaded/static" />
+    <add key="sm:PluginsIgnoredDuringInstallation" value="Misc.DemoShop, Api.WebApi, Developer.Glimpse, Developer.DevTools" />
   </appSettings>
   <location path="Plugins/ImportBiz">
     <system.web>
