Plugin refactoring. Plugins are regular MVC areas now. * No embedded views anymore. Views get copied to the deployment folder * No cumbersome return View("Very.Long.View.Identifier") anymore * Views in plugin source folders can be edited during debug

--- a/src/Plugins/Api.WebApi/SmartStore.Plugin.Api.WebApi.csproj
+++ b/src/Plugins/Api.WebApi/SmartStore.Plugin.Api.WebApi.csproj
@@ -272,7 +272,9 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <EmbeddedResource Include="Views\WebApi\Configure.cshtml" />
+    <None Include="Views\WebApi\Configure.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Content Include="web.config">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
