--- a/src/Plugins/ExternalAuth.OpenId/SmartStore.Plugin.ExternalAuth.OpenId.csproj
+++ b/src/Plugins/ExternalAuth.OpenId/SmartStore.Plugin.ExternalAuth.OpenId.csproj
@@ -120,6 +120,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -190,7 +191,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Views\ExternalAuthOpenId\PublicInfo.cshtml" />
+    <Content Include="Views\ExternalAuthOpenId\PublicInfo.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
