--- a/src/Plugins/DiscountRules.HasOneProduct/SmartStore.Plugin.DiscountRules.HasOneProduct.csproj
+++ b/src/Plugins/DiscountRules.HasOneProduct/SmartStore.Plugin.DiscountRules.HasOneProduct.csproj
@@ -145,7 +145,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Views\DiscountRulesHasOneProduct\Configure.cshtml" />
+    <Content Include="Views\DiscountRulesHasOneProduct\Configure.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Description.txt">
