--- a/src/Plugins/ExternalAuth.Facebook/SmartStore.Plugin.ExternalAuth.Facebook.csproj
+++ b/src/Plugins/ExternalAuth.Facebook/SmartStore.Plugin.ExternalAuth.Facebook.csproj
@@ -229,8 +229,12 @@
     <Content Include="Notes.txt" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Views\ExternalAuthFacebook\Configure.cshtml" />
-    <EmbeddedResource Include="Views\ExternalAuthFacebook\PublicInfo.cshtml" />
+    <Content Include="Views\ExternalAuthFacebook\Configure.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Views\ExternalAuthFacebook\PublicInfo.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
     <Content Include="web.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
