--- a/src/Plugins/Feed.Froogle/SmartStore.Plugin.Feed.Froogle.csproj
+++ b/src/Plugins/Feed.Froogle/SmartStore.Plugin.Feed.Froogle.csproj
@@ -191,7 +191,9 @@
     <EmbeddedResource Include="Data\Migrations\201403112356126_Initial.resx">
       <DependentUpon>201403112356126_Initial.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\FeedFroogle\Configure.cshtml" />
+    <Content Include="Views\FeedFroogle\Configure.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\images\mc_logo.png">
