--- a/src/Plugins/SMS.Clickatell/SmartStore.Plugin.SMS.Clickatell.csproj
+++ b/src/Plugins/SMS.Clickatell/SmartStore.Plugin.SMS.Clickatell.csproj
@@ -159,7 +159,9 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="Service References\Clickatell\webservice_vs.wsdl" />
-    <EmbeddedResource Include="Views\SmsClickatell\Configure.cshtml" />
+    <Content Include="Views\SmsClickatell\Configure.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="web.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
