Some fixes for plugin MVC areas

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -214,6 +214,7 @@
     </Compile>
     <Compile Include="AppPath.cs" />
     <Compile Include="Controllers\NotifyAttribute.cs" />
+    <Compile Include="Controllers\PublicControllerBase.cs" />
     <Compile Include="Controllers\SetWorkingCultureAttribute.cs" />
     <Compile Include="Controllers\PluginControllerBase.cs" />
     <Compile Include="Controllers\CheckAffiliateAttribute.cs" />
