--- a/src/Plugins/Developer.DevTools/SmartStore.Plugin.Developer.DevTools.csproj
+++ b/src/Plugins/Developer.DevTools/SmartStore.Plugin.Developer.DevTools.csproj
@@ -135,21 +135,20 @@
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
     <Compile Include="AdminMenu.cs" />
-    <Compile Include="Controllers\DevToolsAdminController.cs" />
+    <Compile Include="Controllers\DevToolsController.cs" />
     <Compile Include="Controllers\MyCheckoutController.cs" />
     <Compile Include="DependencyRegistrar.cs" />
-    <Compile Include="Filters\HideBannerFilter.cs" />
-    <Compile Include="Filters\MyCheckoutFilter.cs" />
+    <Compile Include="Filters\Samples\SampleCheckoutFilter.cs" />
     <Compile Include="Filters\ProfilerFilter.cs" />
-    <Compile Include="Filters\TestResultFilter.cs" />
-    <Compile Include="Filters\TestActionFilter.cs" />
+    <Compile Include="Filters\Samples\SampleResultFilter.cs" />
+    <Compile Include="Filters\Samples\SampleActionFilter.cs" />
     <Compile Include="DevToolsPlugin.cs" />
     <Compile Include="ProfilerHttpModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RouteProvider.cs" />
     <Compile Include="Services\IProfilerService.cs" />
     <Compile Include="Services\ProfilerService.cs" />
-    <Compile Include="Widgets\ProfilerWidget.cs" />
+    <Compile Include="Settings\ProfilerSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Libraries\SmartStore.Core\SmartStore.Core.csproj">
@@ -168,10 +167,6 @@
       <Project>{75fd4163-333c-4dd5-854d-2ef294e45d94}</Project>
       <Name>SmartStore.Web.Framework</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Presentation\SmartStore.Web\SmartStore.Web.csproj">
-      <Project>{4f1f649c-1020-45be-a487-f416d9297ff3}</Project>
-      <Name>SmartStore.Web</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Description.txt">
@@ -183,17 +178,14 @@
     <Content Include="Views\MyCheckout\MyBillingAddress.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Views\FilterTestAdmin\Index.cshtml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Views\MyCheckout\MiniProfiler.cshtml">
+    <Content Include="Views\DevTools\MiniProfiler.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Web.config">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Views\FilterTestAdmin\Configure.cshtml">
+    <Content Include="Views\DevTools\Configure.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Views\Web.config">
