--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -128,6 +128,7 @@
       <HintPath>..\..\packages\recaptcha.1.0.5.0\lib\.NetFramework 4.0\Recaptcha.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -328,7 +329,7 @@
     <Compile Include="UI\PageAssetsBuilder.cs" />
     <Compile Include="UI\DataListExtensions.cs" />
     <Compile Include="UI\Components\HtmlHelperExtensions.cs" />
-    <Compile Include="UI\Components\IComponent.cs" />
+    <Compile Include="UI\Components\IUiComponent.cs" />
     <Compile Include="UI\Components\IContentContainer.cs" />
     <Compile Include="UI\Components\IHtmlAttributesContainer.cs" />
     <Compile Include="UI\Components\INavigatable.cs" />
