--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -78,6 +78,7 @@
       <Private>True</Private>
       <HintPath>..\..\..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.Extensions" />
