--- a/src/Tests/SmartStore.Services.Tests/SmartStore.Services.Tests.csproj
+++ b/src/Tests/SmartStore.Services.Tests/SmartStore.Services.Tests.csproj
@@ -74,6 +74,7 @@
       <HintPath>..\..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
