Amazon Pay: Pre-process payment method to fullfill amazon checkout

--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -339,6 +339,8 @@
     <Compile Include="Orders\ShoppingCartExtensions.cs" />
     <Compile Include="Orders\ShoppingCartService.cs" />
     <Compile Include="Payments\PaymentMethodBase.cs" />
+    <Compile Include="Payments\PreProcessPaymentResult.cs" />
+    <Compile Include="Payments\ProcessPaymentResultBase.cs" />
     <Compile Include="Payments\RefundPaymentResult.cs" />
     <Compile Include="Payments\RefundPaymentRequest.cs" />
     <Compile Include="Payments\CapturePaymentRequest.cs" />
