--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -318,6 +318,7 @@
     <Compile Include="Orders\CheckoutAttributeFormatter.cs" />
     <Compile Include="Orders\CheckoutAttributeParser.cs" />
     <Compile Include="Orders\CheckoutAttributeService.cs" />
+    <Compile Include="Orders\CheckoutState.cs" />
     <Compile Include="Orders\EventPublisherExtensions.cs" />
     <Compile Include="Orders\OrderExtensions.cs" />
     <Compile Include="Orders\IOrderReportService.cs" />
