--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -394,15 +394,27 @@
     <Content Include="Content\images\ico-content-o60.png" />
     <Content Include="Content\images\ico-content.png" />
     <Content Include="Content\images\fileuploader-loading.gif" />
+    <Content Include="Content\images\icon-plugin-admin.png" />
+    <Content Include="Content\images\icon-plugin-analytics.png" />
+    <Content Include="Content\images\icon-plugin-api.png" />
+    <Content Include="Content\images\icon-plugin-cms.png" />
     <Content Include="Content\images\icon-plugin-currencyexchange.png" />
+    <Content Include="Content\images\icon-plugin-data.png" />
     <Content Include="Content\images\icon-plugin-default.png" />
+    <Content Include="Content\images\icon-plugin-design.png" />
+    <Content Include="Content\images\icon-plugin-developer.png" />
     <Content Include="Content\images\icon-plugin-discountrequirement.png" />
-    <Content Include="Content\images\icon-plugin-externalauth.png" />
+    <Content Include="Content\images\icon-plugin-globalization.png" />
+    <Content Include="Content\images\icon-plugin-media.png" />
+    <Content Include="Content\images\icon-plugin-sales.png" />
+    <Content Include="Content\images\icon-plugin-security.png" />
     <Content Include="Content\images\icon-plugin-import.png" />
     <Content Include="Content\images\icon-plugin-mobile.png" />
     <Content Include="Content\images\icon-plugin-payment.png" />
-    <Content Include="Content\images\icon-plugin-promotionfeed.png" />
+    <Content Include="Content\images\icon-plugin-marketing.png" />
+    <Content Include="Content\images\icon-plugin-seo.png" />
     <Content Include="Content\images\icon-plugin-shipping.png" />
+    <Content Include="Content\images\icon-plugin-social.png" />
     <Content Include="Content\images\icon-plugin-tax.png" />
     <Content Include="Content\images\preloader-32.gif" />
     <Content Include="Content\images\smnet.png" />
