Several performance optimizations

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -128,7 +128,7 @@
       </namespaces>
     </pages>
     <httpModules />
-    <httpRuntime targetFramework="4.5" maxRequestLength="1536000" executionTimeout="5400" maxQueryStringLength="16384" />
+    <httpRuntime targetFramework="4.5.1" maxRequestLength="1536000" executionTimeout="5400" maxQueryStringLength="16384" />
     <httpHandlers>
       <add path="*.less" verb="GET" type="SmartStore.Web.Framework.Themes.LessCssHttpHandler, SmartStore.Web.Framework" />
     </httpHandlers>
@@ -137,24 +137,22 @@
     <modules runAllManagedModulesForAllRequests="true" />
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
-      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
-      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
-      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <add name="LessAssetHandler" path="*.less" verb="GET" type="SmartStore.Web.Framework.Themes.LessCssHttpHandler, SmartStore.Web.Framework" resourceType="File" preCondition="" />
     </handlers>
     <staticContent>
-      <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="1.00:00:00" />
+      <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="24.00:00:00" />
       <remove fileExtension=".svg" />
       <remove fileExtension=".eot" />
       <remove fileExtension=".woff" />
       <remove fileExtension=".otf" />
+      <remove fileExtension=".json" />
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
       <mimeMap fileExtension=".eot" mimeType="application/vnd.ms-fontobject" />
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
       <mimeMap fileExtension=".otf" mimeType="application/x-font-opentype" />
+      <mimeMap fileExtension=".json" mimeType="application/json" />
     </staticContent>
     <urlCompression doStaticCompression="false" doDynamicCompression="true" />
     <security>
