(Perf) web.config runAllManagedModulesForAllRequests is 'false' now. Added a bunch of new web.config files to serve static content explicitly. Also moved plugin meta image files like icon.png or branding.png to the 'Content' subfolder. Theme preview files are also affected and also had to be moved.

--- a/src/Plugins/ExternalAuth.OpenId/SmartStore.Plugin.ExternalAuth.OpenId.csproj
+++ b/src/Plugins/ExternalAuth.OpenId/SmartStore.Plugin.ExternalAuth.OpenId.csproj
@@ -194,6 +194,10 @@
     <Content Include="Views\ExternalAuthOpenId\PublicInfo.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Web.config">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
@@ -202,6 +206,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Views\Web.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\Web.config">
+      <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
@@ -470,7 +478,7 @@
     <Content Include="Description.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="icon.png">
+    <Content Include="Content\icon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Localization\resources.de-de.xml">
