--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -1215,6 +1215,16 @@
   <ItemGroup>
     <Content Include="Views\Packaging\UploadPackage.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Scripts\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
