--- a/src/Plugins/Payments.CashOnDelivery/SmartStore.Plugin.Payments.CashOnDelivery.csproj
+++ b/src/Plugins/Payments.CashOnDelivery/SmartStore.Plugin.Payments.CashOnDelivery.csproj
@@ -160,7 +160,7 @@
     <Content Include="Description.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="icon.png">
+    <Content Include="Content\icon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Localization\resources.de-de.xml">
@@ -174,6 +174,10 @@
     <Content Include="Notes.txt" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Web.config">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
     <Content Include="web.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
