--- a/src/Plugins/Shipping.ByWeight/SmartStore.Plugin.Shipping.ByWeight.csproj
+++ b/src/Plugins/Shipping.ByWeight/SmartStore.Plugin.Shipping.ByWeight.csproj
@@ -186,7 +186,7 @@
     <Content Include="Views\ShippingByWeight\Configure.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="icon.png">
+    <Content Include="Content\icon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Localization\resources.de-de.xml">
@@ -213,6 +213,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Web.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\Web.config">
+      <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
