--- a/src/Plugins/Widgets.TrustedShopsSeal/SmartStore.Plugin.Widgets.TrustedShopsSeal.csproj
+++ b/src/Plugins/Widgets.TrustedShopsSeal/SmartStore.Plugin.Widgets.TrustedShopsSeal.csproj
@@ -182,7 +182,7 @@
     <Content Include="Description.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="icon.png">
+    <Content Include="Content\icon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Localization\resources.de-de.xml">
@@ -194,6 +194,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Notes.txt" />
+    <Content Include="Content\Web.config">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
