--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -696,6 +696,12 @@
     <Content Include="Content\install\variables.less" />
     <Content Include="Content\bootstrap\custom\colorpicker.less" />
     <Content Include="Content\theme.common.less" />
+    <Content Include="Media\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Content\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Scripts\jquery-1.8.3.intellisense.js" />
     <Content Include="favicon.readme.txt" />
     <Content Include="Media\default-avatar.jpg" />
@@ -1536,6 +1542,9 @@
     <Content Include="Scripts\underscore.string.js" />
     <Content Include="Scripts\underscore.string.min.js" />
     <Content Include="Scripts\underscore.min.map" />
+    <Content Include="Scripts\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Scripts\_references.js" />
     <Content Include="Content\bootstrap\custom\throbber.less" />
     <Content Include="Content\bootstrap\custom\images\throbber-progress-black-16.gif" />
@@ -1695,7 +1704,7 @@
     <Content Include="Themes\Alpha\Content\images\ico-edit.gif" />
     <Content Include="Themes\Alpha\Content\images\ico-move-topic.gif" />
     <Content Include="Themes\Alpha\Content\images\loading.gif" />
-    <Content Include="Themes\Alpha\preview.png" />
+    <Content Include="Themes\Alpha\Content\preview.png" />
     <Content Include="Themes\Mobile\Content\images\ajax-loader.gif" />
     <Content Include="Themes\Mobile\Content\images\ajax-loader.png" />
     <Content Include="Themes\Mobile\Content\images\ico-forum-post-high.gif" />
@@ -1714,7 +1723,7 @@
     <Content Include="Themes\Mobile\Content\jquery.mobile.theme-1.3.2.css" />
     <Content Include="Themes\Mobile\Content\jquery.mobile.theme-1.3.2.min.css" />
     <Content Include="Themes\Mobile\Content\styles.css" />
-    <Content Include="Themes\Mobile\preview.png" />
+    <Content Include="Themes\Mobile\Content\preview.png" />
     <Content Include="Themes\print.css" />
     <Content Include="Views\Catalog\BackInStockSubscribePopup.Mobile.cshtml" />
     <Content Include="Views\Catalog\CategoryNavigation.Mobile.cshtml" />
@@ -1933,6 +1942,12 @@
     <Content Include="Themes\Alpha\Content\user.less" />
     <Content Include="Views\Checkout\BillingAddress.cshtml">
       <SubType>Code</SubType>
+    </Content>
+    <Content Include="Themes\Alpha\Content\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Themes\Mobile\Content\Web.config">
+      <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <ItemGroup>
