--- a/src/Presentation/SmartStore.Web/Themes/Mobile/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Mobile/theme.config
@@ -3,6 +3,6 @@
 	   supportRTL="false"
 	   mobileTheme="true" 
 	   version="1.1"
-       previewImageUrl="~/Themes/Mobile/preview.png" 
+       previewImageUrl="~/Themes/Mobile/Content/preview.png" 
        previewText="This is the 'Mobile' site theme.">
 </Theme>
