--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -103,7 +103,7 @@
     </customErrors>
     <sessionState mode="InProc" />
     <trace enabled="true" localOnly="true" pageOutput="true" requestLimit="40" /> 
-    <compilation debug="true" targetFramework="4.5" batch="false" numRecompilesBeforeAppRestart="250" optimizeCompilations="true">
+    <compilation debug="true" targetFramework="4.5" batch="false" numRecompilesBeforeAppRestart="250" optimizeCompilations="false">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -134,12 +134,24 @@
     </httpHandlers>
   </system.web>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true" />
     <validation validateIntegratedModeConfiguration="false" />
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-      <add name="LessAssetHandler" path="*.less" verb="GET" type="SmartStore.Web.Framework.Themes.LessCssHttpHandler, SmartStore.Web.Framework" resourceType="File" preCondition="" />
+    <modules runAllManagedModulesForAllRequests="false" />
+    <handlers accessPolicy="Script">
+      <!-- Clear all handlers, prevents executing code file extensions or returning any file contents. -->
+      <clear/>
+      <!-- Return 404 for all requests via a managed handler. The URL routing handler will substitute the MVC request handler when routes match. -->
+      <add name="NotFound" path="*" verb="*" type="System.Web.HttpNotFoundHandler" preCondition="integratedMode" requireAccess="Script"/>
+      <!-- sitemap.xml -->
+      <add name="sitemap" path="sitemap.xml" verb="*" type="System.Web.Routing.UrlRoutingModule" resourceType="Unspecified" preCondition="integratedMode" />
+      <!-- robots.txt -->
+      <add name="robots" path="robots.txt" verb="*" type="System.Web.Routing.UrlRoutingModule" resourceType="Unspecified" preCondition="integratedMode" />
+      <!-- WebApi -->
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit"/>
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit"/>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0"/>
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0"/>
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
     <staticContent>
       <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="24.00:00:00" />
