Optimized admin navbar (icons & stuff)

--- a/src/Presentation/SmartStore.Web/Administration/Web.config
+++ b/src/Presentation/SmartStore.Web/Administration/Web.config
@@ -35,6 +35,7 @@
   <system.webServer>
     <handlers accessPolicy="Script,Read">
       <add name="favicon" path="favicon.ico" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" />
+      <add name="sitemap.config" path="sitemap.config" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read" />
     </handlers>
   </system.webServer>
   <runtime>
