#393 Web API: Implement OData actions for simpler working with product attributes

--- a/src/Plugins/Api.WebApi/SmartStore.Plugin.Api.WebApi.csproj
+++ b/src/Plugins/Api.WebApi/SmartStore.Plugin.Api.WebApi.csproj
@@ -220,6 +220,7 @@
     <Compile Include="RouteProvider.cs" />
     <Compile Include="Security\WebApiPermissionProvider.cs" />
     <Compile Include="Services\IWebApiPluginService.cs" />
+    <Compile Include="Services\WebApiCore.cs" />
     <Compile Include="Services\WebApiPluginService.cs" />
     <Compile Include="WebApiConfigurationProvider.cs" />
     <Compile Include="WebApiPlugin.cs" />
