* (UI) AJAXified product edit tab: all tabs other than the first one load on demand per AJAX * (Developer)  Plugins can provide custom tabs more easily (now with on demand AJAX loading) * (Developer) Model binding for plugin tab views: models from plugin tabs get automatically materialized and bound to TabbableModel.CustomProperties[MyKey]. Extended the SmartModelBinder for this. * (Developer) New event ModelBoundEvent. Consume this in plugins to persist plugin specific models. * (Admin) Added 'GMC' tab to product edit view. This is more a coding example for the above stuff rather than a new feature. * (UI) optimized and reorganized product edit view a bit

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -239,6 +239,7 @@
     <Compile Include="Extensions\HttpContextExtensions.cs" />
     <Compile Include="Extensions\NameValueCollectionExtensions.cs" />
     <Compile Include="Controllers\HandleInstallFilter.cs" />
+    <Compile Include="Mvc\ModelBoundEvent.cs" />
     <Compile Include="Plugins\ProviderManager.cs" />
     <Compile Include="UI\HtmlAttribute.cs" />
     <Compile Include="UI\HtmlAttributeExtensions.cs" />
@@ -385,12 +386,6 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="..\..\packages\AutoMapper.3.1.1\lib\net40\AutoMapper.Net4.dll">
-      <Link>AutoMapper.Net4.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Libraries\SmartStore.Core\SmartStore.Core.csproj">
