--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -429,6 +429,8 @@
     <Content Include="sitemap.config">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Views\Product\_CreateOrUpdate.Inventory.cshtml" />
+    <Content Include="Views\Product\_Create.SaveFirst.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\admin.less" />
