--- a/src/Presentation/SmartStore.Web/Administration/packages.config
+++ b/src/Presentation/SmartStore.Web/Administration/packages.config
@@ -3,8 +3,11 @@
   <package id="Autofac" version="3.4.1" targetFramework="net45" />
   <package id="AutoMapper" version="3.1.1" targetFramework="net45" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net45" />
+  <package id="jQuery" version="1.8.3" targetFramework="net45" />
+  <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
 </packages>
