--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -100,7 +100,7 @@
     <!-- TODO Update your <browserCaps> section in order to prevent adding of guest records for each request made by a search engine (although they're periodically deleted) -->
     <!-- Find more info in browserCaps.config file -->
     <browserCaps configSource="browserCaps.config" />
-    <customErrors mode="On" />
+    <customErrors mode="RemoteOnly" />
     <sessionState mode="InProc" />
     <trace enabled="true" localOnly="true" pageOutput="true" requestLimit="40" /> 
     <compilation debug="true" targetFramework="4.5" batch="false" numRecompilesBeforeAppRestart="250" optimizeCompilations="true">
